--- a/_gulp/_pug/recommendations.pug
+++ b/_gulp/_pug/recommendations.pug
@@ -39,7 +39,7 @@ html(lang="ru")
 
             nav.subcategories-nav
               ul
-                li: a(href="#!") после 20 лет
+                li.active: a(href="#!") после 20 лет
                 li: a(href="#!") после 30 лет
                 li: a(href="#!") после 40 лет
 
