--- a/_gulp/_pug/gallery.pug
+++ b/_gulp/_pug/gallery.pug
@@ -52,16 +52,16 @@ html(lang="ru")
             .gallery
               .gallery__row
                 .gallery__block
-                  a(href="./tmp/gallery-img-1.png").gallery-item
+                  a(href="./tmp/gallery-img-1.png" data-fancybox="gallery")
                     img(src="./tmp/gallery-img-1.png", alt="")
                 .gallery__block.--second
-                  a(href="./tmp/gallery-img-2.png").gallery-item
+                  a(href="./tmp/gallery-img-2.png" data-fancybox="gallery")
                     img(src="./tmp/gallery-img-2.png", alt="")
                 .gallery__block.--third
-                  a(href="./tmp/gallery-img-3.png").gallery-item
+                  a(href="./tmp/gallery-img-3.png" data-fancybox="gallery")
                     img(src="./tmp/gallery-img-3.png", alt="")
                 .gallery__block.--fourth
-                  a(href="./tmp/gallery-img-4.png").gallery-item
+                  a(href="./tmp/gallery-img-4.png" data-fancybox="gallery")
                     img(src="./tmp/gallery-img-4.png", alt="")
 
     include ./_include/_footer
