--- a/_gulp/_pug/index.pug
+++ b/_gulp/_pug/index.pug
@@ -152,16 +152,15 @@ html(lang="ru")
                 .about__block
                   a(href="#!")
                     img(src="./tmp/about-index-img-1.png", alt="")
+            .about__btn
+              button(type="button").about__btn-prev
+              button(type="button").about__btn-next
             .about__content
               .d-none.d-xl-block
                 .h2 О нас
               p В нашей студии всегда весна и хорошее настроение. Мы любим свою работу и максимально качественно оказываем услуги. Готовы эксперементировать вместе с вами и создавать сногшибательные бразы!
               p Приходите сами, приводите друзей и родных, заказывайте подарочные сертификаты своим близким и любимым.
               p Мы позаботимся о вашей красоте!!!
-              .clear
-              .about__btn
-                button(type="button").about__btn-prev
-                button(type="button").about__btn-next
 
       // View
       .view
@@ -181,54 +180,54 @@ html(lang="ru")
                 i.icon-telegram
         .view__bottom
           .container-fluid
-            .view__carousel.gallery
+            .view__carousel
               div
                 .view__block
-                  a(href="./tmp/view-img-1.png").gallery-item
+                  a(href="./tmp/view-img-1.png" data-fancybox="gallery")
                     img(src="./tmp/view-img-1.png", alt="")
               div
                 .view__block
-                  a(href="./tmp/view-img-2.png").gallery-item
+                  a(href="./tmp/view-img-2.png" data-fancybox="gallery")
                     img(src="./tmp/view-img-2.png", alt="")
               div
                 .view__block
-                  a(href="./tmp/view-img-3.png").gallery-item
+                  a(href="./tmp/view-img-3.png" data-fancybox="gallery")
                     img(src="./tmp/view-img-3.png", alt="")
               div
                 .view__block
-                  a(href="./tmp/view-img-4.png").gallery-item
+                  a(href="./tmp/view-img-4.png" data-fancybox="gallery")
                     img(src="./tmp/view-img-4.png", alt="")
               div
                 .view__block
-                  a(href="./tmp/view-img-1.png").gallery-item
+                  a(href="./tmp/view-img-1.png" data-fancybox="gallery")
                     img(src="./tmp/view-img-1.png", alt="")
               div
                 .view__block
-                  a(href="./tmp/view-img-2.png").gallery-item
+                  a(href="./tmp/view-img-2.png" data-fancybox="gallery")
                     img(src="./tmp/view-img-2.png", alt="")
               div
                 .view__block
-                  a(href="./tmp/view-img-1.png").gallery-item
+                  a(href="./tmp/view-img-1.png" data-fancybox="gallery")
                     img(src="./tmp/view-img-1.png", alt="")
               div
                 .view__block
-                  a(href="./tmp/view-img-2.png").gallery-item
+                  a(href="./tmp/view-img-2.png" data-fancybox="gallery")
                     img(src="./tmp/view-img-2.png", alt="")
               div
                 .view__block
-                  a(href="./tmp/view-img-3.png").gallery-item
+                  a(href="./tmp/view-img-3.png" data-fancybox="gallery")
                     img(src="./tmp/view-img-3.png", alt="")
               div
                 .view__block
-                  a(href="./tmp/view-img-4.png").gallery-item
+                  a(href="./tmp/view-img-4.png" data-fancybox="gallery")
                     img(src="./tmp/view-img-4.png", alt="")
               div
                 .view__block
-                  a(href="./tmp/view-img-1.png").gallery-item
+                  a(href="./tmp/view-img-1.png" data-fancybox="gallery")
                     img(src="./tmp/view-img-1.png", alt="")
               div
                 .view__block
-                  a(href="./tmp/view-img-2.png").gallery-item
+                  a(href="./tmp/view-img-2.png" data-fancybox="gallery")
                     img(src="./tmp/view-img-2.png", alt="")
 
       // Popular
