--- a/_gulp/_pug/recommendations.pug
+++ b/_gulp/_pug/recommendations.pug
@@ -55,7 +55,7 @@ html(lang="ru")
                     p Гладкая, нежная кожа – мечта многих. Чтобы убрать лишние волосы, используют бритвенные станки, эпиляторы, воск, сахарную пасту. К сожалению, у каждого из перечисленных вариантов есть ряд побочных эффектов: болезненные ощущения, врастающие волоски, раздражение... 
                     a(href="#!").news__block-more
                       i.icon-arrow-right
-                .news__block.--left
+                .news__block.--center
                   .news__block-thumb
                     a(href="#!")
                       img(src="./tmp/content-thumb-img-2.png", alt="").img-fluid
@@ -75,7 +75,7 @@ html(lang="ru")
                     p Жаркое время года требует объемного внимания к коже и волосам. Именно потому, в салонах Визави появилась новая идеальная процедура для волос от легендарного итальянского бренда NASHI ARGAN.
                     a(href="#!").news__block-more
                       i.icon-arrow-right
-                .news__block.--right
+                .news__block.--center
                   .news__block-thumb
                     a(href="#!")
                       img(src="./tmp/content-thumb-img-2.png", alt="").img-fluid
