--- a/_gulp/_scss/1-base/_font.scss
+++ b/_gulp/_scss/1-base/_font.scss
@@ -128,6 +128,9 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-youtube:before {
+  content: "\e91d";
+}
 .icon-instagram:before {
   content: "\e917";
 }
