--- a/_gulp/_pug/_include/_footer-js.pug
+++ b/_gulp/_pug/_include/_footer-js.pug
@@ -6,3 +6,4 @@ script(src="./js/libs/jquery.maskedinput/jquery.maskedinput.min.js")
 script(src="./js/libs/slick/slick.min.js")
 script(src="./js/libs/twentytwenty/jquery.event.move.js")
 script(src="./js/libs/twentytwenty/jquery.twentytwenty.js")
+script(src="./js/libs/fancybox/jquery.fancybox.min.js")
