--- a/_gulp/_pug/_include/_head.pug
+++ b/_gulp/_pug/_include/_head.pug
@@ -35,5 +35,6 @@ head
 
   //- link(rel='stylesheet', href='css/fonts.min.css')
   //- link(rel='stylesheet' href='https://i.icomoon.io/public/temp/b571260b10/visavi/style.css')
+  link(rel="stylesheet", href="./js/libs/fancybox/jquery.fancybox.min.css")
   link(rel='stylesheet', href='./css/style.min.css')
   
