--- a/_gulp/_scss/2-layout/_footer.scss
+++ b/_gulp/_scss/2-layout/_footer.scss
@@ -17,6 +17,7 @@
     img {
       display: block;
       margin: 0 auto;
+      width: 200px;
     }
   }
   &__social {
@@ -51,15 +52,16 @@
   }
   &__phones {
     display: flex;
-    flex-direction: column;
-    align-items: center;
+    flex-direction: row;
+      justify-content: center;
     a {
       font-size: rem(16px);
       color: $color-black;
       text-decoration: none;
       display: inline-block;
       &+a {
-        margin-top: 10px;
+        margin-left: 20px;
+        margin-top: 0;
       }
     }
   }
@@ -67,9 +69,10 @@
     display: flex;
     justify-content: center;
     text-align: center;
-    flex-direction: column;
+    flex-direction: row;
     margin-bottom: 40px;
     &>div {
+      width: 50%;
       padding: 0;
     }
     ul {
@@ -102,16 +105,7 @@
         padding: 0 20px;
       }
     }
-    &__phones {
-      flex-direction: row;
-      justify-content: center;
-      a {
-        &+a {
-          margin-left: 20px;
-          margin-top: 0;
-        }
-      }
-    }
+    
   }
   @include media-breakpoint-up(md) {
     padding-top: 20px;
