--- a/_gulp/_scss/3-modules/_modules.scss
+++ b/_gulp/_scss/3-modules/_modules.scss
@@ -137,6 +137,10 @@
         &::before {
           top: 11px;
         }
+        img {
+          height: 224px;
+          object-fit: cover;
+        }
       }
     }
     &-head {
